k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stellar-toml-checker
  namespace: suat
spec:
  selector:
    matchLabels:
      run: stellar-toml-checker
  replicas: 1
  template:
    metadata:
      labels:
        run: stellar-toml-checker
    spec:
      containers:
      - name: stellar-toml-checker
        image: docker.k8s.sui.li/stellar-toml-checker:11
        lifecycle:
          postStart:
            exec:
              command: ["service", "redis-server", "start"]
---
apiVersion: v1
kind: Service
metadata:
  name: stellar-toml-checker
  namespace: suat
  labels:
    run: stellar-toml-checker
spec:
  selector:
    run: stellar-toml-checker
  ports:
  - name: http
    port: 80
    protocol: TCP
