k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stellar-toml-checker
  namespace: suat
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/ssl-certificate: "devops/tls-sui-li"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/server-timeout: "120000"
spec:
  tls:
  - hosts:
    - stellar.sui.li
    secretName: "devops-tls-sui-li"
  rules:
  - host: "stellar.sui.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stellar-toml-checker
            port:
              number: 80
